# RAG-Project-2026

./: .dockerignore  .env  .gitignore  Dockerfile  RAG_test.ipynb  README.md  agent.py  app.py  app_remote.py  config.env  config.toml  entrypoint.sh  main.py  pyproject.docker.toml  pyproject.toml
config/: system_prompt.py  system_prompt.txt
ma_bdd_juridique/940cccd6-8b48-4bae-9888-51046e79cb51/: index_metadata.pickle
notebook/: RAG_test.ipynb
scripts/: agent.py  app.py  app_local.py
tools/: recherche_juridique.py  recherche_juridique_rag.py
