[project]
name = "RAG-Project 2026"
version = "0.1.0"
description ="Création d'une solution RAG dockeriser permetttant la lecture de fichier volumineux (Doc Civil, Code général des impôts)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.1.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "anthropic>=0.18.0"
]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "notebook",
    "matplotlib",
    "seaborn"
]