[project]
name = "rag-project-2026"
version = "0.1.0"
description ="Création d'une solution RAG dockeriser permetttant la lecture de fichier volumineux (Doc Civil, Code général des impôts)"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-chroma>=0.2.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=3.0.0",
    "anthropic>=0.40.0",
    "pypdf>=5.0.0",
]

[tool.uv]
dev-dependencies = [
    "jupyter",
    "notebook",
    "matplotlib",
    "seaborn"
]
